WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
300273
Fix ProcessSwap.ReuseProcessAfterNavigatingFromAboutPage API test failure in site isolation
https://bugs.webkit.org/show_bug.cgi?id=300273
Summary
Fix ProcessSwap.ReuseProcessAfterNavigatingFromAboutPage API test failure in ...
ccarley2
Reported
2025-10-06 16:59:59 PDT
Fix ProcessSwap.ReuseProcessAfterNavigatingFromAboutPage API test failure in site isolation
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-10-06 17:01:12 PDT
<
rdar://problem/162078528
>
ccarley2
Comment 2
2025-10-06 17:05:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51898
EWS
Comment 3
2025-10-14 12:10:12 PDT
Committed
301488@main
(58362ea98239): <
https://commits.webkit.org/301488@main
> Reviewed commits have been landed. Closing PR #51898 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug