Fix ProcessSwap.ReuseProcessAfterNavigatingFromAboutPage API test failure in site isolation https://bugs.webkit.org/show_bug.cgi?id=300273 rdar://162078528

Reviewed by Sihui Liu.

This patch adds a case to WebProcessPool::processForNavigationInternal.
When the protocol is about, navigations were treated as cross-site. This patch
adds a check for site isolation to fix the bug.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):
(WebKit::WebPageProxy::createNewPage):
* Source/WebKit/UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::processForNavigationInternal):
* Source/WebKit/UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didStartUsingProcessForSiteIsolation):

Canonical link: https://commits.webkit.org/301488@main